# hipaa-rag-system

./: .env.example  .gitignore  README.md  README2.md  bad_responses,txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_etl.py
ETL/: __init__.py  check_chunk_size.py  extract_section_links.py  hipaa_schema.json  linearize_pdf.py  load_rag_chunks.py  models.py  parser.py
ETL/extractors/: __init__.py  pdf.py
ETL/loaders/: __init__.py  postgres.py
ETL/models/: __init__.py  chunks.py
ETL/transformers/: __init__.py  chunker.py  parser.py
backend/: Dockerfile  __init__.py  dependencies.py  graph_builder.py  load_pdf.py  load_to_db.py  main.py  startup.py  test_evaluation.py
backend/api/: main.py
backend/db/: __init__.py  connection.py  queries.py
backend/etl/: extractors.py  loaders.py  transformers.py
backend/models/: __init__.py  schemas.py
backend/retrieval/: __init__.py  retrieval.py  retrieval_with_graph.py
backend/scripts/: run_etl.py
backend/services/: __init__.py  classifier.py  generator.py  reranker.py  search.py
config/: __init__.py  logging.py  settings.py
data/: README.md  hipaa_data.json  hipaa_linear_text.txt
frontend/: Dockerfile  app.py
nginx/: nginx.conf
tests/: test_chunking.py  test_search.py
tests/evaluation/: __init__.py  test_evaluation.py
